--- a/styles/globals.css
+++ b/styles/globals.css
@@ -28,7 +28,7 @@ a {
   }
   body {
     color: white;
-    background: #0f0f0f;
+    background: #001C35;
   }
 }
 
@@ -39,14 +39,14 @@ a {
 .EasyMDEContainer .CodeMirror {
   border: none !important;
   border-radius: 10px !important;
-  background: #222222;
+  background: #1E364A;
   color: white;
   padding: 10px;
   caret-color: dodgerblue;
 }
 
 .editor-preview {
-  background-color: #0f0f0f !important;
+  background-color: #001C35 !important;
 }
 
 ::selection {
@@ -73,11 +73,11 @@ a {
 
 pre {
   padding: 20px;
-  background-color: #0f0f0f;
+  background-color: #001C35;
 }
 
 blockquote {
-  border-left: 5px solid #0f0f0f;
+  border-left: 5px solid #001C35;
   padding-left: 20px;
   margin-left: 0px;
 }
